[metadata]
name = aioswitcher
version = 2019.3.21
url = https://github.com/tomerfi/aioswitcher
author = Tomer Figenblat
author_email = tomer.figenblat@gmail.com
license = MIT License
license_file = LICENSE
description = Switcher Boiler Bridge and API
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
platform = any
classifiers =
    Framework :: AsyncIO
    Framework :: Flake8
    Framework :: Pytest
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Home Automation
    Typing :: Typed

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src
